@@ -31,7 +31,7 @@ test (1.2-2) unstable; urgency=low
 test (1.2-1) unstable; urgency=low
 
   * This entry should not have conflicts with Algorithm::Merge installed.
-  * I'm the added line mentionned below (B-only).
+  * I'm the added line mentioned below (B-only).
   * Changelog B should a have supplementary line above this one.
   * Pi is 3.14 is true for all changelogs.
   * Changelog A should have a supplementary line
