@@ -47,7 +47,7 @@ test (1.2-1) unstable; urgency=low
     in the resulting changelog).
 =======
   * This entry should not have conflicts with Algorithm::Merge installed.
-  * I'm the added line mentionned below (B-only).
+  * I'm the added line mentioned below (B-only).
   * Changelog B should a have supplementary line above this one.
   * Pi is 3.14 is true for all changelogs.
   * Changelog A should have a supplementary line
