@@ -4605,7 +4605,7 @@
 	tree even if that package doesn't contain an shlibs file. Then
 	don't complain about missing dependency information if the lib is in
 	the same package than the binary. Also ignore it if the library is
-	not versionned and can't have an shlibs file.
+	not versioned and can't have an shlibs file.
 	* scripts/Dpkg/Path.pm (guess_pkg_root_dir)
 	(check_files_are_the_same): New helper functions.
 
