@@ -3,6 +3,7 @@ dpkg (1.17.17) UNRELEASED; urgency=low
   [ Guillem Jover ]
   * Add dpkg-vendor, Dpkg/File.pm and Dpkg/Util.pm to the list of files with
     translatable strings, so that they can be translated.
+  * Fix some typos for versioned and mentioned in comments and changelogs.
 
   [ Updated programs translations ]
   * German (Sven Joachim).
